# rbo

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .requirements.txt  .watchmanconfig  README.md  app_before_install.sh  app_install.sh  app_start.sh  app_stop.sh  appspec.yml  codecov.yml  config.toml  manage.py  package-lock.json  pelicanconf.py  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: codeql-analysis.yml  flake8.yml  lint.yml  tests.yml  upload_to_s3.yml
blog/: admin.py  models.py  settings.py  sitemaps.py  urls.py  utils.py  views.py
blog/migrations/: 0001_initial.py  0002_auto_20201210_1057.py  0003_auto_20201210_1231.py
blog/posts/: How did I create this blog? (Part 1) copy.md  How did I create this blog? (Part 1).md  How did I create this blog? (Part 2).md  How did I create this blog? (Part 3).md  Introduction.md  My VSCode setup.md  template.md
blog/static/blog/css/: chaos.css  css_dark_mode_gist_embed_code.css  main.min.88e7083eff65effb7485b6e6f38d10afbec25093a6fac42d734ce9024d3defbd.css  prism.css  style.css  styles.css  syntax.css  (+1 more)
blog/static/blog/favicon/: site.webmanifest
blog/templates/: 404.html  about.html  base.html  blog.html  blog_index.html  categories.html  contact.html  index.html  layout.html  nibble.html  nibbles.html  nibbles_tags.html  post.html  post_detail.html  posts.html  postv2.html  robots.txt  search_results.html  tag.html  tags.html
blog/templates/archive/: blog_category.html  blog_index.html
blog/templatetags/: markdown_extras.py
blog_hugo/content/posts/: my-first-post.md
blog_hugo/public/: index.html  index.xml  sitemap.xml
blog_hugo/public/posts/: index.html
blog_hugo/public/tags/: index.xml
content/: Introduction.md
content/output/: archives.html  authors.html  categories.html  index.html  my-first-review.html  tags.html
content/output/category/: review.html
content/output/feeds/: all-en.atom.xml  all.atom.xml  review.atom.xml
content/posts/: How_to_manage_python_projects.md  Introduction.md  Moving_to_fish_shell.md  My_terminal_setup.2.0.md  My_terminal_setup.md  dev_container.md  learning_go_part1.md
content/python/: How_to_manage_python_project.md
content/tools/: Moving_to_fish_shell.md  My_terminal_setup.md  My_terminal_setup_MacOS.md
hugo/PaperMod/: config.yml
hugo/PaperMod/public/: 404.html  index.html  index.xml  robots.txt  sitemap.xml
markdownx/: widgets.html
output/: archives.html  authors.html  categories.html  how-to-manage-python-projects.html  index.html  installation.html  introduction.html  moving-to-fish-shell.html  my-first-review.html  my-terminal-setup.html  search-index.st  search.html  search.toml  tags.html
output/author/: ryan-butler.html
output/category/: other.html  productivity.html  review.html  software.html
output/feeds/: all.atom.xml  other.atom.xml  productivity.atom.xml
output/tag/: ai.html  css.html  markdown.html  other.html  python.html  tools.html
pelican-plugins/output/: headers-of-all-sizes.html
pelican-plugins/output/feeds/: all-en.atom.xml  all.atom.xml  test_data.atom.xml
public/: 404.html  index.html  index.xml  sitemap.xml
public/categories/: index.html  index.xml
public/posts/: index.html  index.xml
public/posts/how_to_manage_python_projects/: index.html
public/posts/introduction/: index.html
public/posts/learning_go_part1/: index.html
public/posts/moving_to_fish_shell/: index.html
public/posts/my_terminal_setup/: index.html
public/posts/my_terminal_setup.2.0/: index.html
public/projects/: index.html  index.xml
public/projects/bludhaven/: index.html
public/projects/hydra/: index.html
public/projects/tatooine/: index.html
public/tags/: index.html  index.xml
public/tags/golang/: index.html  index.xml
public/tags/other/: index.html  index.xml
public/tags/python/: index.html  index.xml
public/tags/software-development/: index.html  index.xml
public/tags/terminal/: index.html  index.xml
public/tags/tools/: index.html  index.xml
rbo_django/: asgi.py  settings.py  urls.py  wsgi.py
rbo_django/templates/: base.html
rbo_hugo/: config.toml
rbo_hugo/public/: 404.html  index.html  index.xml  sitemap.xml
rbo_hugo/public/categories/: index.html  index.xml
rbo_hugo/public/posts/: index.html  index.xml
rbo_hugo/public/tags/: index.html
resume/: urls.py  views.py
resume/templates/: base.html  resume_index.html
resume_hugo/: config.toml
resume_hugo/data/: education.yaml  experience.yaml  features.yaml  projects.yaml
resume_hugo/public/: index.html
scripts/: app_before_install.sh  app_install.sh  app_verify.sh  dbbackup_to_s3.py
tests/: test_rbo.py
themes/Papyrus/: package-lock.json
(+43 files in other folders)
