[tool.poetry]
name = "rbo"
version = "2.0.0"
description = "Python Developer Blog"
authors = ["ryanleonbutler <ryanleonbutler@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = ">=3.8.0"
asgiref = ">=3.3.2,<4"
async-timeout = ">=3.0.1"
attrs = "20.3.0"
boto3 = "^1.16"
botocore = "^1.19"
certifi = ">=2020.12.5"
chardet = ">=3.0.4"
Django = "3.2.8"
django-appconf = ">=1.0.4"
django-etc = ">=1.3.0"
django-markdownx = ">=3.0.1"
gunicorn = ">=20.0.4"
idna = ">=2.10"
jmespath = ">=0.10.0"
Markdown = ">=3.3.3"
maxminddb = ">=2.0.3"
multidict = ">=5.1.0"
mysqlclient = ">=2.0.3"
Pillow = "^8.3"
python-dateutil = ">=2.8.1"
pytz = ">=2020.4"
PyYAML = ">=5.4"
requests = ">=2.25.1"
s3transfer = ">=0.3.3"
six = ">=1.15.0"
sqlparse = "^0.4"
typing-extensions = ">=3.7.4.3"
ua-parser = ">=0.10.0"
urllib3 = ">=1.26.4"
user-agents = ">=2.2.0"
yarl = ">=1.6.3"
martor = ">=1.6.3"
django-environ = "^0.8"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
tox = "*"
pytest = "*"
pytest-cov = "*"
pylint = "*"
pydocstyle = "*"
coverage = {version = "^6.1.1", extras = ["toml"]}

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
known_first_party = "rbo_django"
known_third_party = ["pytest"]
known_django = "django"
sections = ["FUTURE","STDLIB","DJANGO","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]
profile = "black"
multi_line_output = 3
lines_after_imports = 2

[tool.coverage.run]
omit = ["blog/migrations/*", "resume/migrations/*"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py{39}-django{32}

[testenv]
deps =
    django32: Django==3.2.8
whitelist_externals =
    poetry
    bash
skip_install = true
commands =
    bash -c 'poetry export --dev --without-hashes -f requirements.txt | grep -v "^[dD]jango==" > .requirements.txt'
    poetry run isort blog/ resume/ rbo_django/ --float-to-top
    poetry run black blog/ resume/ rbo_django/ --exclude blog/migrations/
    poetry run flake8 blog/ resume/ rbo_django/
    poetry run coverage erase
    poetry run pytest -ra -v --cov=blog --cov=resume --cov=rbo_django --cov-report xml
    poetry run coverage report -m
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"