[tool.poetry]
name = "rbo"
version = "0.1.0"
description = ""
authors = ["Ryan Butler <butryan@amazon.com>"]
readme = "README.md"
packages = [{include = "rbo"}]

[tool.poetry.dependencies]
python = "^3.11"
pelican = {extras = ["markdown"], version = "^4.8.0"}
pelican-search = "^1.0.1"
pelican-neighbors = "^1.2.0"
pelican-readtime = "^0.2.0"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
